Tested on Seaslab. Compiles, but has some kind of memory corruption error. Attempted to implement dynamic arrays for the function that gets args, but have to first make convenient way of passing the array size between recursive calls.

--- a/lab1/README
+++ b/lab1/README
@@ -11,6 +11,15 @@ by:
 
 Changelog:
 
+02/02-03/12
+KNOWN BUGS:
+ Time travel leaks memory
+ Arrays are not yet dynamic
+ Time travel does not block properly
+
+Implemented time travel
+Fixed parsing (hopefully for good)
+
 02/01/12
 Subshells still bugged
 Added Skeleton code for 1C
